# aoc2020

./: aoc2020.cabal  hie.yaml  shell.nix
src/: Aoc2020.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
src/Day01/: Part1.hs  Part2.hs
src/Day02/: Part1.hs  Part2.hs
src/Day03/: Part1.hs  Part2.hs
src/Day04/: Part1.hs  Part2.hs
src/Day05/: Part1.hs  Part2.hs
src/Day06/: Part1.hs  Part2.hs
src/Day07/: Part1.hs  Part2.hs
src/Day08/: Part1.hs  Part2.hs
src/Day09/: Part1.hs  Part2.hs
src/Day10/: Part1.hs  Part2.hs
src/Day11/: Part1.hs  Part2.hs
src/Day12/: Part1.hs  Part2.hs
src/Day13/: Part1.hs  Part2.hs
src/Day14/: Part1.hs  Part2.hs
src/Day15/: Part1.hs  Part2.hs
src/Day16/: Part1.hs  Part2.hs
src/Day17/: Part1.hs  Part2.hs
src/Day18/: Part1.hs  Part2.hs
src/Day19/: Part1.hs  Part2.hs
src/Day20/: Part1.hs  Part2.hs
src/Day21/: Part1.hs  Part2.hs
src/Day22/: Part1.hs  Part2.hs
src/Day23/: Part1.hs  Part2.hs
src/Day24/: Part1.hs  Part2.hs
src/Day25/: Part1.hs
